regression/fail/exp.2.sml
val x = 13
and x = ();
